# duckdb-oracle

./: .gitignore  AGENTS.md  BOOTSTRAP_SUMMARY.md  CHANGELOG.md  CMakeLists.txt  CONTRIBUTING.md  Makefile  README.md  SECURITY.md  extension_config.cmake  test_connection.sql  vcpkg.json
.claude/agents/: docs-vision.md  expert.md  prd.md  testing.md
.claude/commands/: implement.md  prd.md  review.md  test.md
.gemini/: GEMINI.md  settings.json
.gemini/commands/: implement.toml  prd.toml  review.toml  sync-guides.toml  test.toml
.gemini/tools/: detect_mcp.py
.github/: CODEOWNERS
.github/workflows/: MainDistributionPipeline.yml  OracleCI.yml  auto-tag.yml  duckdb-update-check.yml  integration-tests.yml  main-distribution-pipeline.yml  oracle-ci.yml  release-unsigned.yml
conductor/: product-guidelines.md  product.md  tech-stack.md  tracks.md
conductor/code_styleguides/: duckdb-extension.md
conductor/tracks/duckdb_version_update_20251224/: metadata.json  plan.md  spec.md
conductor/tracks/oracle_write_robustness_20251224/: metadata.json  plan.md  spec.md
docs/: COMPATIBILITY.md  RELEASE.md  SETUP.md  UPDATING.md
scripts/: setup_oci_linux.sh  setup_oci_macos.sh  setup_oci_windows.ps1  test_integration.sh
specs/active/: prompt.md
specs/active/advanced-oracle-features/: README.md  prd.md  recovery.md  tasks.md
specs/active/advanced-oracle-features/research/: .gitkeep
specs/active/ci-fix/: findings.md  prd.md  recovery.md  summary.md  tasks.md
specs/active/ci-fix/patterns/: analysis.md
specs/active/duckdb-version-update/: SUMMARY.md  prd.md  recovery.md  tasks.md
specs/active/duckdb-version-update/patterns/: analysis.md
specs/active/duckdb-version-update/research/: plan.md
specs/active/native-oracle-query-support/: prd.md  recovery.md  tasks.md
specs/active/oracle-advanced-pushdown/: prd.md  recovery.md  tasks.md
specs/active/oracle-attach-support/: recovery.md  tasks.md
specs/active/oracle-secret-management/: .gitkeep  prd.md  recovery.md  tasks.md
specs/active/oracle-secret-management/research/: .gitkeep  duckdb-secret-manager-analysis.md
specs/active/oracle-spatial-geometry/: README.md  prd.md  recovery.md  tasks.md
specs/active/oracle-write-support/: prd.md  recovery.md  tasks.md
specs/active/oracle-write-support/research/: plan.md
specs/active/release-distribution-strategy/: SUMMARY.md  prd.md  recovery.md  tasks.md
specs/active/release-distribution-strategy/research/: .gitkeep  description.yml  learnings.md
specs/active/write-support-fixes/: prd.md  recovery.md  tasks.md
specs/archive/native-oracle-query-support/: README.md  prd.md  tasks.md
specs/archive/native-oracle-query-support/research/: plan.md
specs/archive/oracle-advanced-pushdown/: prd.md  recovery.md  tasks.md
specs/archive/oracle-advanced-pushdown/research/: plan.md
specs/archive/oracle-attach-support/: prd.md  tasks.md
specs/archive/oracle-attach-support/research/: plan.md
specs/guides/: architecture.md  code-style.md  development-workflow.md  metadata-scalability.md  oci-array-fetch-quirks.md  oracle-execute-security.md  quality-gates.yaml  spatial-implementation.md  testing.md
specs/guides/patterns/: README.md  adapter-pattern.md  filter-pushdown-column-mapping.md  split-pipeline.md  triple-point-update.md
specs/guides/workflows/: intelligent-development.yaml
specs/template-spec/: prd.md  recovery.md  tasks.md
specs/template-spec/research/: plan.md
src/: oracle_connection.cpp  oracle_connection_manager.cpp  oracle_extension.cpp  oracle_secret.cpp
src/include/: oracle_catalog.hpp  oracle_catalog_state.hpp  oracle_connection.hpp  oracle_connection_manager.hpp  oracle_extension.hpp  oracle_result.hpp  oracle_secret.hpp  oracle_settings.hpp  oracle_storage_extension.hpp  oracle_table_entry.hpp  oracle_table_function.hpp  oracle_transaction.hpp  oracle_transaction_manager.hpp  oracle_write.hpp
src/storage/: oracle_catalog.cpp  oracle_schema_entry.cpp  oracle_storage_extension.cpp  oracle_table_entry.cpp  oracle_transaction.cpp  oracle_transaction_manager.cpp  oracle_write.cpp
test/integration/init_sql/: 01_setup.sql
test/integration/oracle/: advanced_edge_cases.test  advanced_execute_integration.test  advanced_metadata_integration.test  advanced_schema_resolution_integration.test  edge_cases.test  execute.test  metadata.test  schema_resolution.test
test/integration_tests/: test_debug_simple.test  test_edge_cases.test  test_json.test  test_mixed_columns.test  test_partitioning.test  test_pipelined.test  test_vectors.test  test_views_matviews.test  test_write_basic.test  test_write_lobs.test  test_write_spatial.test  test_write_vector.test  test_xml_blob.test
test/integration_tests/oracle/: edge_cases.test  execute.test  metadata.test  schema_resolution.test
test/sql/: manual_verification.md  oracle.test  oracle_pushdown.test  oracle_secret_backward_compat.test  oracle_secret_basic.test  oracle_secret_errors.test  test_integration_temp.test  test_oracle_attach.test  test_oracle_execute_negative.test  test_oracle_query.test  test_oracle_scan_and_wallet.test
test/sql/oracle/: advanced_edge_cases.test  advanced_execute.test  advanced_execute_integration.test  advanced_metadata.test  advanced_metadata_integration.test  advanced_schema_resolution.test  advanced_schema_resolution_integration.test  advanced_settings.test
test/sql/spatial/: test_oracle_spatial_basic.test
test/unit_tests/: test_attach_and_scan.test  test_execute_failures.test  test_filter_pushdown.test  test_oracle_write.test  test_query_function.test  test_secret_backward_compat.test  test_secret_basic.test  test_secret_errors.test  test_wallet_and_settings.test
test/unit_tests/oracle/: test_execute.test  test_metadata.test  test_schema_resolution.test  test_settings.test
test/unit_tests/spatial/: test_spatial_basic.test
